--- a/templates/index.html
+++ b/templates/index.html
@@ -143,10 +143,7 @@
         .logo {
             font-size: 1.5rem;
             font-weight: 800;
-            background: var(--primary-gradient);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: white;
         }
 
         .nav-right {
